# ProDropLens

./: .gitignore  pyproject.toml
core/: __init__.py  dataset.py  logit_lens.py  phase1_experiments.py  utils.py  viz.py
notebook/: phase0_tokenizer_discovery.ipynb  phase1_logit_lens.ipynb
results/phase0/: README.md  phase0_position_reference.csv  phase0_tokenization_by_person.csv  phase0_tokenization_by_tense.csv  phase0_tokenization_by_verb.csv  phase0_tokenization_type_summary.csv  phase0_verb_classification.csv
results/phase1/: README.md  phase1_all_sum_vs_mean_sensitivity.csv  phase1_all_sum_vs_mean_sensitivity_summary.csv  phase1_context_condition_summary.csv  phase1_context_final_selection.csv  phase1_context_person_form_scores.csv  phase1_context_person_form_specs.csv  phase1_context_person_margin_layers.csv  phase1_context_person_margin_transition_summary.csv  phase1_context_tokenization.csv  phase1_context_tokenization_summary.csv  phase1_control_condition_summary.csv  phase1_control_final_selection.csv  phase1_control_person_form_scores.csv  phase1_control_person_form_specs.csv  phase1_control_person_margin_layers.csv  phase1_control_person_margin_transition_summary.csv  phase1_control_sum_vs_mean_sensitivity.csv  phase1_control_sum_vs_mean_sensitivity_summary.csv  phase1_control_tokenization_summary.csv  phase1_model_comparison_condition_summary.csv  phase1_model_comparison_delta_vs_baseline.csv  phase1_model_comparison_final_selection.csv  phase1_model_comparison_person_form_specs.csv  (+10 more)
scripts/: phase1_run_context_experiments.py
