[project]
name = "prodrop-lens"
version = "0.1.0"
description = "Mechanistic interpretability analysis of Turkish pro-drop structure"
requires-python = ">=3.10"

dependencies = [
    "transformer-lens>=3.1.0",
    "transformers>=4.30.0",
    "torch>=2.4,<2.7",
    "einops>=0.7.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "nbformat>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
